Add new post - paper review - second try

--- a/_posts/2025-09-26-CLIP.md
+++ b/_posts/2025-09-26-CLIP.md
@@ -294,7 +294,7 @@ tags: [CLIP]
 - Selection bias 를 막기 위해 더 다양한 태스크의 데이터셋을 이용해서도 평가
 - 결과
     
-    ![clip zeroshot 성능](assets\img\clip.png)
+    ![clip zeroshot 성능](/assets/img/clip.png)
     
 - Linear probe average over Kornblith 12 datasets
     - Small clip → resnet 모델들보다 우수, BiT-M이나 비슷한 연산량을 필요로 하는 efficientnet 모델들 보다는 덜 우수
