--- a/_posts/2025-10-08-TinyCLIP.md
+++ b/_posts/2025-10-08-TinyCLIP.md
@@ -94,9 +94,9 @@ tags: [Knowledge Distillation, CLIP]
     - 위 두 loss를 모두 고려하여 distillation loss를 formulate (CE는 cross-entropy loss, s는 student, t는 teacher)
 - 수식
     
-    ![distillation loss](assets\img\tinyclip1.png)
+    ![distillation loss](/assets/img/tinyclip1.png)
     
-    ![distillation loss](assets\img\tinyclip2.png)
+    ![distillation loss](assets/img/tinyclip2.png)
     
 - Affinity mimicking → student model이 large model의 visual-linguistic 정렬 방식을 배우게 함 (두 모달리티의 ‘피처’가 아닌 ‘관계에 중점을 둠)
 
