--- a/_posts/2025-10-29-DCLIP.md
+++ b/_posts/2025-10-29-DCLIP.md
@@ -152,7 +152,7 @@ tags: [Knowledge Distillation, CLIP, Meta Distillation]
     - Temperature scaled attention을 활용해 합쳐짐 → global attention
     - Z - global attention
     
-    ![image.png](assets\img\dclip.png)
+    ![image.png](assets/img/dclip.png)
     
 - Cross attention의 단점(?)
     - Teacher 모델을 바로 사용하게 되면
