add new post - third try

--- a/_posts/2025-09-26-CLIP.md
+++ b/_posts/2025-09-26-CLIP.md
@@ -3,6 +3,7 @@ title: "Learning Transferable Visual Models From Natural Language Supervision"
 date: 2025-09-26
 categories: [Capstone, 논문리뷰]
 tags: [CLIP]
+published: true
 ---
 
 [Learning Transferable Visual Models From Natural Language Supervision](https://arxiv.org/abs/2103.00020)
